sonar update